--- a/mocker-front/src/assets/i18n/en.json
+++ b/mocker-front/src/assets/i18n/en.json
@@ -196,7 +196,7 @@
     "copyright": {
       "company": "2023 Mocker, LLC.",
       "term": "Terms of Use",
-      "eula": "",
+      "eula": "Eula",
       "privacy": "Privacy"
     },
     "grid": {
